<resources>
    <string name="app_name">NetMaster Quality Control</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">NetMaster QC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <!-- MyDowmTask param names -->
    <string name="me">me</string>
    <string name="title">title</string>
    <string name="login">login</string>
    <string name="description">description</string>
    <string name="Description">Description</string>
    <string name="gsonStr">gsonStr</string>
    <string name="password">password</string>
    <string name="urlTail">urlTail</string>
    <string name="task">task</string>
    <string name="emlpId">emlpId</string>
    <string name="taskId">taskId</string>
    <string name="networkname">networkname</string>
    <string name="owners">owners</string>
    <string name="urlStrValue">http://176.37.239.136:8082/</string>

    <!-- Url Tails-->
    <string name="loginTail">authAndroid</string>
    <string name="creatTaskTail">task/addTask</string>
    <string name="updateTask">task/updateTask</string>
    <string name="addEmpl">employee/addEmpl</string>
    <string name="updateEmpl">employee/updateEmpl</string>

    <!-- Others -->
    <string name="space"> </string>


    <!-- Facebook -->
    <string name="fb_id">540025372830220</string>

    <!--Dialog -->
    <string name="create_new_Task">Create new Task</string>
    <string name="register">Register</string>
    <string name="register_dialog_title">No such user found. Register new ?</string>
    <string name="delete_Employee">Delete Employee?</string>
    <string name="delete">delete</string>
    <string name="do_logout">Do you wish to Logout?</string>
    <string name="logout">Log Out</string>
    <string name="create_new_empl">Create new Employee?</string>
    <string name="createNetwork">Create Network?</string>
    <string name="networkid">networkid</string>
    <string name="networkgson">networkgson</string>
    <string name="employee">employee</string>
    <string name="employee_getAll">employee/getAll</string>
    <string name="task_getAll">task/getAll</string>
    <string name="network_getAll">network/getAll</string>
    <string name="detailsFragment">DetailsFragment</string>
    <string name="no_permissions">You haven\'t permissions!</string>
    <string name="employee_getEmpl">employee/getEmpl</string>
    <string name="event_getAllbyNetwork">event/getAllbyNetwork</string>
    <string name="server_unreachable">Server Unreachable</string>
    <string name="network_addEmployeeToMyNetwork">network/addEmployeeToMyNetwork</string>
    <string name="id">id</string>
    <string name="event_getLastNews">event/getLastNews</string>
    <string name="task_id">Task ID</string>
    <string name="task_type">Task type</string>
    <string name="executors">Executors</string>
    <string name="deription">Description</string>
    <string name="address">Address</string>
    <string name="published">Published</string>
    <string name="accepted">Accepted</string>
    <string name="done">Done</string>
    <string name="status">Status</string>
    <string name="priority">Priority</string>
    <string name="saveBtnTag">saveBtnTag</string>
    <string name="deleteBtnTag">deleteBtnTag</string>
    <string name="acceptBtnTag">acceptBtnTag</string>
    <string name="contactBtnTag">contactBtnTag</string>
    <string name="type">Type</string>
    <string name="Password">Password</string>
    <string name="TaskDetailsFragment">TaskDetailsFragment</string>
    <string name="EmplDetailsFragment">EmplDetailsFragment</string>
    <string name="employees">Employees</string>
    <string name="create_new_office">Create new Office?</string>
    <string name="office_getAll">office/getAll</string>
    <string name="task_getTask">task/getTask</string>
    <string name="task_acceptTask">task/acceptTask</string>
    <string name="network_create">network/create</string>

</resources>
